test/syc/bad/lvalreqassgnexpr.c
/*
 * Lvalue required (assigning to result of expression).
 */

void foo(void)
{
	int x;

	x * 2 = 1;
}
